<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorOnPrimary"
    android:orientation="vertical"
    tools:context=".fragments.PrendasRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/prendas_register_title"
                android:textColor="?colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="28sp"
                tools:ignore="MissingConstraints" />


            <ImageView
                android:id="@+id/register_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/prendas_register_nombre"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="text"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_nombre_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/red_error"
                    android:visibility="invisible"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/prendas_register_precio"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_precio"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="text"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_precio_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:visibility="invisible"
                    android:textColor="@color/red_error"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/prendas_register_marca"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_marca"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="text"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_marca_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:visibility="invisible"
                    android:textColor="@color/red_error"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/prendas_register_stock"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_stock"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="text"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_stock_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:visibility="invisible"
                    android:textColor="@color/red_error"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/prendas_register_url_tienda"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_url_tienda"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="text"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_url_tienda_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:visibility="invisible"
                    android:textColor="@color/red_error"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/prendas_register_url_imagen"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/register_url_imagen"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:textColor="?colorSecondary"
                        android:paddingHorizontal="7dp"
                        android:paddingVertical="2dp"
                        android:textSize="15sp"
                        android:lines="1"
                        android:inputType="text"
                        android:fontFamily="@font/inter_medium"
                        android:background="@drawable/shape_input"
                        />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="120dp"
                        app:cardCornerRadius="20dp">
                        <ImageView
                            android:id="@+id/register_imagen"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_baseline_image_24"
                            />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <TextView
                    android:id="@+id/register_url_imagen_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:visibility="invisible"
                    android:textColor="@color/red_error"
                    android:textSize="14sp"/>


            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/register_boton_registrar"
                android:layout_width="150dp"
                android:layout_height="45dp"
                app:backgroundTint="@null"
                android:background="@drawable/shape_button"
                android:text="@string/prendas_register_button_registrar"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:fontFamily="@font/inter_bold"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/register_boton_cancelar"
                android:layout_width="150dp"
                android:layout_height="45dp"
                app:backgroundTint="@null"
                android:background="@drawable/shape_button_outline"
                android:text="@string/prendas_register_button_cancelar"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:textColor="?colorPrimary"
                android:fontFamily="@font/inter_bold"
                android:lineSpacingExtra="1dp"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>